--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
   },
   "homepage": "https://github.com/Kamikaze92/p2-iproject-server#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "node-env-file": "^0.1.8",
+    "pg": "^8.7.1",
+    "sequelize": "^6.9.0",
     "spotify-web-api-node": "^5.0.2"
   }
 }
