--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "node-env-file": "^0.1.8",
+    "passport-spotify": "^2.0.0",
     "pg": "^8.7.1",
     "sequelize": "^6.9.0",
     "spotify-web-api-node": "^5.0.2"
